Fix Warp and Cage transform in master

The problem was cause that assignment operator has been called on the
same object. So it has been cleared instead of assigned.

BUG:416505